--- a/style.css
+++ b/style.css
@@ -1,18 +1,20 @@
 body {
 	font-family: Arial, sans-serif;
-	display: flex;
+	display: grid;
 	justify-content: center;
-	align-items: center;
+	/* align-items: center;  */
 	height: 100vh;
 	margin: 0;
 	background-color: #f0f0f0;
   }
   
   h1 {
+	
 	text-align: center;
   }
   
   #gameBoard {
+	/* grid-area: b; */
 	display: grid;
 	grid-template-columns: repeat(3, 100px);
 	grid-template-rows: repeat(3, 100px);
